nvidia_gpu_stats/vendor/darling/tests/compile-fail/not_impl_from_meta.rs
use darling::FromMeta;

struct NotImplFm;

#[derive(FromMeta)]
struct OuterFm {
    inner: NotImplFm,
}

#[derive(darling::FromDeriveInput)]
#[darling(attributes(hello))]
struct OuterFdi {
    inner: NotImplFm,
}

fn main() {}
