nvidia_gpu_stats/vendor/darling/tests/compile-fail/not_impl_from_meta.stderr
error[E0277]: the trait bound `NotImplFm: FromMeta` is not satisfied
 --> tests/compile-fail/not_impl_from_meta.rs:7:12
  |
7 |     inner: NotImplFm,
  |            ^^^^^^^^^ the trait `FromMeta` is not implemented for `NotImplFm`
  |
  = help: the following other types implement trait `FromMeta`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others

error[E0277]: the trait bound `NotImplFm: FromMeta` is not satisfied
  --> tests/compile-fail/not_impl_from_meta.rs:13:12
   |
13 |     inner: NotImplFm,
   |            ^^^^^^^^^ the trait `FromMeta` is not implemented for `NotImplFm`
   |
   = help: the following other types implement trait `FromMeta`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
